--- a/src/assets/styles/common/header.less
+++ b/src/assets/styles/common/header.less
@@ -1,3 +1,7 @@
-header {
-  height: 100px;
+.navbar {
+  height: @navbar-height;
+  background-color: @primary-color;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
