--- a/src/assets/styles/common/index.less
+++ b/src/assets/styles/common/index.less
@@ -1,1 +1,12 @@
+@import '../mixins/index.less';
 @import './header.less';
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.p-lr-20 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
