--- a/src/assets/styles/mixins/variables.less
+++ b/src/assets/styles/mixins/variables.less
@@ -1,8 +1,10 @@
+// 布局
+@navbar-height: 54px;
 // 字体
 @font-family: "PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 // 颜色
-@primary-color: #1890ff; // 全局主色
-@link-color: #1890ff; // 链接色
+@primary-color: #66CCCC; // 全局主色
+@link-color: #66CCCC; // 链接色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
