--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -1,1 +1,9 @@
-<header>我是header</header>
+<header class="navbar">
+  <div class="navbar-left p-lr-20">
+    <a class="navbar-brand">
+      <img src="assets/image/ol-logo.png"/>&nbsp;OpenLayers
+    </a>
+  </div>
+  <div class="navbar-center"></div>
+  <div class="navbar-right"></div>
+</header>
